fixed overflow problem with data population and color

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,6 +1,7 @@
 body {
     background-image: linear-gradient(to bottom, #ffffff 0%, #00ff00 100%);
-    height: 100%;
+    display: block;
+    overflow: auto;
 }
 a:link {
     text-decoration:none;
@@ -53,8 +54,11 @@ a:hover {
 .content {
     border: 1px solid green;
     background:rgba(0,0,0,0.5);
-    height: 85%;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    overflow: auto;
     color:white;
+}
+
+.content table {
+  color: white;
 }
